<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaveLoginInfo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_username">用户名</string>
    <string name="tv_password">密码</string>
    <string name="remmenber_psd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="btn_login">登录</string>
    <string name="menu_settings">注销</string>
    <string name="exit">退出</string>

</resources>